# curri

./: Cargo.toml
src/: all.rs  always.rs  any.rs  apply.rs  bool.rs  compose.rs  cond.rs  curry.rs  find.rs  identity.rs  if_else.rs  lib.rs  map.rs  reduce.rs
src/internal/: all.rs  always.rs  any.rs  apply.rs  assoc.rs  bool.rs  compose.rs  cond.rs  curry.rs  find.rs  identity.rs  if_else.rs  map.rs  mod.rs  reduce.rs
