[package]
name = "curri"
version = "0.1.0"
edition = "2021"
description = "A simple Functional Programming Tools"
license = "MIT"
repository = "https://github.com/kirigirihitomi/curri.git"
authors = ["kirigirihitomi <448350599infw@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_utils = "*"
